--- a/UI/WebPage1.cshtml
+++ b/UI/WebPage1.cshtml
@@ -1,67 +1,83 @@
-﻿<!DOCTYPE html>
+﻿@using WebApplication1.Repository;
+@using WebApplication1.Model;
+@{ 
+    List<PostModel> posts = new PostDaoImp().getPosts();
+
+}
+
+<!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-    * {
-        box-sizing: border-box;
-        direction:rtl;
-    }
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
+            direction: rtl;
+        }
 
-    .card {
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        width: 30%;
-        border-radius: 5px;
-    }
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+            width: 30%;
+            
+            border-radius: 5px;
+        }
 
-    .card:hover {
-        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-     }
+        .card:hover {
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        }
 
-    img {
-        border-radius: 5px 5px 0 0;
-    }
+        .post_img {
+            border-radius: 5px 5px 0 0;
+            width: 100px;
+            height:100px;
+            float: left;
+            object-fit: cover
+        }
 
-    .container {
-        padding: 2px 16px;
-    }
+        .container {
+            padding: 2px 16px;
+        }
 
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
 
-    .column {
-        float: left;
-        padding: 10px;
-        margin: 10px;
-    }
-</style>
+        .column {
+            float: left;
+            padding: 10px;
+            margin: 10px;
+        }
+        .post_desc{
+            color:darkgray;
+            font-size:14px;
+
+        }
+    </style>
 </head>
-<body>
 
+<body>
     <h2>مثلا دیوار</h2>
 
-        @using WebApplication1.Repository;
-        @using WebApplication1.Model;
-        @{List<PostModel> posts = new PostDaoImp().getPosts(); 
-            System.Diagnostics.Debug.WriteLine(posts[0].name);
-            }
-<div class="row">
-    @foreach (PostModel row in posts)
-    {
 
-        <div class="column card">
-            <img src="~/images/test_image.png" alt="Avatar" style="width: 100% ">
-            <div class="container">
-                <h4><b>@row.name</b></h4>
-                <p>@row.title</p>
+    <div class="row">
+        @foreach (PostModel row in posts)
+        {
+
+            <div class="column card">
+                <img class="post_img" src="~/images/test_image.png" alt="Avatar" >
+                <div class="container">
+                    <h4><b>@row.name</b> </h4>
+                    <p class="post_desc">@row.title</p>               
+                    <p class="post_desc">5000000 تومان</p>
+                    <p class="post_desc">دقایقی پیش</p>
+                </div>
             </div>
-        </div>
-    }
-</div>
+        }
+    </div>
 </body>
+
 </html>
 
