--- a/UI/WebPage1.cshtml
+++ b/UI/WebPage1.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WebApplication1.Repository;
 @using WebApplication1.Model;
-@{ 
+@{
     List<PostModel> posts = new PostDaoImp().getPosts();
 
 }
@@ -9,6 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <style>
         * {
             box-sizing: border-box;
@@ -19,18 +20,17 @@
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
             width: 30%;
-            
-            border-radius: 5px;
+            border-radius: 15px;
         }
 
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
+            .card:hover {
+                box-shadow: 0 8px 8px 0 rgba(0,0,0,0.4);
+            }
 
         .post_img {
             border-radius: 5px 5px 0 0;
             width: 100px;
-            height:100px;
+            height: 100px;
             float: left;
             object-fit: cover
         }
@@ -50,29 +50,66 @@
             padding: 10px;
             margin: 10px;
         }
-        .post_desc{
-            color:darkgray;
-            font-size:14px;
 
+        .post_desc {
+            color: darkgray;
+            font-size: 14px;
         }
+
+        .body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .topnav {
+            overflow: hidden;
+            background-color: #333;
+        }
+
+            .topnav a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17px;
+                
+            }
+
+                .topnav a:hover {
+                    background-color: #ddd;
+                    color: black;
+                }
+
+                .topnav a.active {
+                    background-color: #A0A0A0;
+                    color: white;
+                }
+
+
     </style>
 </head>
 
 <body>
-    <h2>مثلا دیوار</h2>
-
+    @*<h2></h2>*@
+    <div class="topnav">
+       
+        <a href="WebPage2.cshtml">ورود / ثبت نام</a>
+        <a href="#home">خانه</a>
+        <a href="#about">درباره</a>
+    </div>
 
     <div class="row">
         @foreach (PostModel row in posts)
         {
 
             <div class="column card">
-                <img class="post_img" src="~/images/test_image.png" alt="Avatar" >
+                <img class="post_img" src="~/images/test_image.png" alt="Avatar">
                 <div class="container">
                     <h4><b>@row.name</b> </h4>
-                    <p class="post_desc">@row.title</p>               
-                    <p class="post_desc">5000000 تومان</p>
+                    <p class="post_desc">@row.title تومان</p>
                     <p class="post_desc">دقایقی پیش</p>
+
                 </div>
             </div>
         }
