--- a/UI/WebPage2.cshtml
+++ b/UI/WebPage2.cshtml
@@ -175,10 +175,10 @@
     <div class="bottom-container">
         <div class="row">
             <div class="col">
-                <a href="#" style="color: white" class="btn"></a>
+                <a href="#" style="color: white" class="btn">تست</a>
             </div>
             <div class="col">
-                <a href="#" style="color:white" class="btn"></a>
+                <a href="#" style="color:white" class="btn">فراموشی رمزعبور</a>
             </div>
         </div>
     </div>
